--- a/website/index.html
+++ b/website/index.html
@@ -13,6 +13,12 @@ body {
   <center>
 <h1> Top vijf mooiste bestemmingen in Italië </h1> 
   </center> 
+  
+  <a href="home">home</a>
+  <a href="informatie">informatie</a>
+  <a href="steden">steden</a>
+  <a href="eten">steden</a>
+  <a href="vervoer">steden</a>
 
 
 </body>
