--- a/website/index.html
+++ b/website/index.html
@@ -17,8 +17,8 @@ body {
   <a href="home">home</a>
   <a href="informatie">informatie</a>
   <a href="steden">steden</a>
-  <a href="eten">steden</a>
-  <a href="vervoer">steden</a>
+  <a href="eten">eten</a>
+  <a href="vervoer">vervoer</a>
 
 
 </body>
