--- a/website/index.html
+++ b/website/index.html
@@ -16,12 +16,15 @@ body {
   
   <center>
   <a href="home">home</a>
+  a {
+   color: black;
+  }
   <a href="informatie">informatie</a>
   <a href="steden">steden</a>
   <a href="eten">eten</a>
   <a href="vervoer">vervoer</a>
   </center>
-
+ 
 
 </body>
 </html>
