--- a/informatie/index.html
+++ b/informatie/index.html
@@ -1,21 +1,20 @@
-<!DOCTYPE html>
 <html>
 <head>
-  <style>
+<style>
 body {
   background-color: #e6ffe6;
 }
-<style> 
+</style>
 </head>
 <body>
   
-<center>
+  <center>
 <h1>Informatie</h1>
   </center>
-<center>
-<p>Italië is een van de meest bezochte vakantiebestemming in Europa. Italië staat bekend om het lekkere eten, de gezellige kleine sfeervolle steegjes, de geschiedenis van de Grieken en Romeinen, het lekkere weer en de mooie steden. In Italië heb je heel veel mooie steden en zijn er genoeg bezienswaardigheden om te bezoeken. Het fijne van Italië is ook dat je er voor kan kiezen om voor een zon, zee en strand vakantie te gaan of voor een actieve vakantie aangezien er in elke stad wel iets te doen is en je ook hele mooie wandelingen/fietstochten kan maken. Italië is ook een fijne vakantiebestemming omdat er altijd wel iets te doen is wat iedereen leuk vindt en als het een keertje slecht weer is dan is er meestal ook nog een groot winkelcentrum in de buurt waar je lekker kan shoppen en eten</p>
+  
+  <center>
+<p> Italië is een van de meest bezochte vakantiebestemming in Europa. Italië staat bekend om het lekkere eten, de gezellige kleine sfeervolle steegjes, de geschiedenis van de Grieken en Romeinen, het lekkere weer en de mooie steden. In Italië heb je heel veel mooie steden en zijn er genoeg bezienswaardigheden om te bezoeken. Het fijne van Italië is ook dat je er voor kan kiezen om voor een zon, zee en strand vakantie te gaan of voor een actieve vakantie aangezien er in elke stad wel iets te doen is en je ook hele mooie wandelingen/fietstochten kan maken. Italië is ook een fijne vakantiebestemming omdat er altijd wel iets te doen is wat iedereen leuk vindt en als het een keertje slecht weer is dan is er meestal ook nog een groot winkelcentrum in de buurt waar je lekker kan shoppen en eten </p>
   </center>
     
-
-</body>
+  </body>
 </html>
