--- a/website/index.html
+++ b/website/index.html
@@ -15,8 +15,8 @@ body {
   </center> 
   
   <center>
-  <a href="home">home</a>
-  <a href="informatie">informatie</a>
+  <a href="https://28030.github.io/website/index.html">home</a>
+  <a href="https://28030.github.io/informatie/index.html">informatie</a>
   <a href="steden">steden</a>
   <a href="eten">eten</a>
   <a href="vervoer">vervoer</a>
