--- a/experiment/index.html
+++ b/experiment/index.html
@@ -1,2 +1,2 @@
 
-<img src="https://www.travelvalley.nl/uploads/headers/mooiste-campings-italie.jpg">
+<img src="https://www.travelvalley.nl/uploads/headers/mooiste-campings-italie.jpg" style="width: 1000px; height: 327.578px; margin: 0px;">>
