--- a/experiment/index.html
+++ b/experiment/index.html
@@ -1,2 +1,25 @@
-
+<html>
+<head>
+<title> Web-design informatica</title>
+<style>
+body {
+  background-color: #e6ffe6;
+}
+</style>
+</head>
+<body> 
 <img src="https://www.travelvalley.nl/uploads/headers/mooiste-campings-italie.jpg" style="width: 1000px; height: 327.578px; margin: 0px;">>
+  
+  <center>
+<h1> Italië </h1> 
+  </center> 
+  
+  <center>
+  <a href="https://28030.github.io/website/index.html">home</a>
+  <a href="https://28030.github.io/informatie/index.html">informatie</a>
+  <a href="steden">steden</a>
+  <a href="eten">eten</a>
+  <a href="vervoer">vervoer</a>
+  </center>
+
+
