--- a/experiment/index.html
+++ b/experiment/index.html
@@ -1,25 +1,13 @@
 <html>
 <head>
 <title> Web-design informatica</title>
-
 <style>
-body {
-  background-image: "https://www.travelvalley.nl/uploads/headers/mooiste-campings-italie.jpg" ;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: cover;
-}
 
-  </style>
-
-body {
-  background-color: #e6ffe6;
-}
 </style>
 </head>
 <body> 
 
-  <img src="https://www.travelvalley.nl/uploads/headers/mooiste-campings-italie.jpg" style="width: 1000px; height: 327.578px; margin: 0px;">>
+  <img src="https://www.travelvalley.nl/uploads/headers/mooiste-campings-italie.jpg">
   
   <center>
 <h1> Italië </h1> 
