--- a/steden/index.html
+++ b/steden/index.html
@@ -1,1 +1,28 @@
-
+<html>
+<head>
+<style>
+body {
+  background-color: #e6ffe6;
+}
+</style>
+</head>
+<body>
+  
+   <center>
+  <a href="https://28030.github.io/website/index.html">home</a>
+  <a href="https://28030.github.io/informatie/index.html">informatie</a>
+  <a href="steden">steden</a>
+  <a href="eten">eten</a>
+  <a href="vervoer">vervoer</a>
+  </center>
+  
+  <center>
+<h1>steden</h1>
+  </center>
+ 
+  <center>
+<p> </p>
+  </center>
+  
+ 
+</html>
