--- a/steden/index.html
+++ b/steden/index.html
@@ -11,7 +11,7 @@ body {
    <center>
   <a href="https://28030.github.io/website/index.html">home</a>
   <a href="https://28030.github.io/informatie/index.html">informatie</a>
-  <a href="steden">steden</a>
+  <a href="https://28030.github.io/steden/index.html">steden</a>
   <a href="eten">eten</a>
   <a href="vervoer">vervoer</a>
   </center>
@@ -21,8 +21,12 @@ body {
   </center>
  
   <center>
-<p> </p>
+<p>Italië heeft veel mooie steden en hieronder heb ik de top 5 populairste en naar mijn mening mooiste steden neer gezet</p>
   </center>
+ 
+  <br>
+  <ol><li>Rome</li></ol>  
+  </br>
   
  
 </html>
