--- a/steden/index.html
+++ b/steden/index.html
@@ -32,11 +32,15 @@ body {
   
   <br>
   <center>
+    <h1>
   <ol><li>Rome</li></ol>  
+    </h1>
   </center>
   </br>
 
-<br>
+<p> Rome is een mooie oude stad met veel oude gebouwen van zelfs nog van de tijd van de Grieken en Romeinen. Je hebt er veel bezienswaardigeheden en er valt altijd wel iets te doen. Mensen komen meestal naar Rome toe voor de oude geschiedenis van de stad en het lekkere weer natuurlijk.</p> 
+
+  <br>
 <center>
  <img src="https://s3.eu-west-1.amazonaws.com/cdn.spydeals.nl/images/uploads/j9eSlNezg0tTAt37noThTnoIkiVykSqcqzrYqrNk.jpeg"> 
 </center>
@@ -48,7 +52,8 @@ body {
   <ol><li>Venetië</li></ol>
   </h1> 
 </center>
-</br> 
+</br> .
   
- 
+<p>Venetië is met name een gezellige stad. Je hebt in Venetië veel kleine steegjes en kanalen. Het is in Venetië met name leuk om een tocht in een boot te doen, door de kanalen te varen en rond te lopen door de stad terwijl je de omgeving om je heen goed laat bezinken want Venetië is daadwerkelijk een hele mooie en bijzondere plek die je niet zomaar overal vindt.</p>
+
 </html>
