--- a/informatie/index.html
+++ b/informatie/index.html
@@ -11,7 +11,7 @@ body {
    <center>
   <a href="https://28030.github.io/website/index.html">home</a>
   <a href="https://28030.github.io/informatie/index.html">informatie</a>
-  <a href="steden">steden</a>
+  <a href="https://28030.github.io/steden/index.html">steden</a>
   <a href="eten">eten</a>
   <a href="vervoer">vervoer</a>
   </center>
