--- a/steden/index.html
+++ b/steden/index.html
@@ -21,7 +21,7 @@ body {
   </center>
  
   <center>
-<p>Italië heeft veel mooie steden en hieronder heb ik de top 5 populairste en naar mijn mening mooiste steden neer gezet</p>
+<p><h1>Italië heeft veel mooie steden en hieronder heb ik de top 5 populairste en naar mijn mening mooiste steden neer gezet</h1></p>
   </center>
   
   <p>
@@ -32,9 +32,7 @@ body {
   
   <br>
   <center>
-    <h1>
   <li>Rome</li>
-    </h1>
   </center>
   </br>
 
@@ -50,12 +48,12 @@ body {
 
 <br>
 <center>
-  <h1>
-  <ol><li>Venetië</li></ol>
-  </h1> 
+<li>Venetië</li> 
 </center>
-</br> .
+</br> 
   
+<center>
 <p>Venetië is met name een gezellige stad. Je hebt in Venetië veel kleine steegjes en kanalen. Het is in Venetië met name leuk om een tocht in een boot te doen, door de kanalen te varen en rond te lopen door de stad terwijl je de omgeving om je heen goed laat bezinken want Venetië is daadwerkelijk een hele mooie en bijzondere plek die je niet zomaar overal vindt. </p>
+</center>
 
 </html>
