--- a/steden/index.html
+++ b/steden/index.html
@@ -21,11 +21,9 @@ body {
   </center>
  
   <center>
-<p><h1>Italië heeft veel mooie steden en hieronder heb ik de top 5 populairste en naar mijn mening mooiste steden neer gezet</h1></p>
+<p><b>Italië heeft veel mooie steden en hieronder heb ik de top 5 populairste en naar mijn mening mooiste steden neer gezet</b></p>
   </center>
   
-  <br>
-  </br>
   
   <p>
   <center>
@@ -35,12 +33,12 @@ body {
   
   <br>
   <center>
-  <li>Rome</li>
+    <li><b>Rome</b></li>
   </center>
   </br>
 
   <center> 
-<br> Rome is een mooie oude stad met veel oude gebouwen van zelfs nog van de tijd van de Grieken en Romeinen. Je hebt er veel bezienswaardigeheden en er valt altijd wel iets te doen. Mensen komen meestal naar Rome toe voor de oude geschiedenis van de stad en het lekkere weer natuurlijk. </br> 
+<p> Rome is een mooie oude stad met veel oude gebouwen van zelfs nog van de tijd van de Grieken en Romeinen. Je hebt er veel bezienswaardigeheden en er valt altijd wel iets te doen. Mensen komen meestal naar Rome toe voor de oude geschiedenis van de stad en het lekkere weer natuurlijk. </p> 
   </center>
   
 <br>
@@ -51,7 +49,7 @@ body {
 
 <br>
 <center>
-<li>Venetië</li> 
+  <li><b>Venetië</b></li> 
 </center>
 </br> 
   
