--- a/steden/index.html
+++ b/steden/index.html
@@ -62,7 +62,7 @@ body {
 
 <br>
 <center>
- <img src="https://images.musement.com/cover/0002/39/top-cityscape-view-on-the-dome-of-santa-maria-del-fiori-florence-jpg_header-138319.jpeg?w=1200&h=630&q=95&fit=crop"> 
+ <img src="https://images.musement.com/cover/0002/39/top-cityscape-view-on-the-dome-of-santa-maria-del-fiori-florence-jpg_header-138319.jpeg?w=1200&h=630&q=95&fit=crop" style="width: 800px; height: 500px; margin: 0px;">
 </center>
 </br>
 
@@ -78,7 +78,7 @@ body {
   
 <br>
 <center>
- <img src="https://thumbor.pijper.io/p-bOI8g6u-Flzej9-Z4pOy31mG8=/1440x582/https://storage.indicium.app/source/lonely-planet/bestemmingen/europa/steden/milaan_170027194_mlenn.jpg"> 
+ <img src="https://thumbor.pijper.io/p-bOI8g6u-Flzej9-Z4pOy31mG8=/1440x582/https://storage.indicium.app/source/lonely-planet/bestemmingen/europa/steden/milaan_170027194_mlenn.jpg" style="width: 800px; height: 500px; margin: 0px;"> 
 </center>
 </br>
 
