--- a/steden/index.html
+++ b/steden/index.html
@@ -36,7 +36,7 @@ body {
   
   <br>
   <center>
-    <li><h1>Rome</h1></li>
+    <li><b>Rome</b></li>
   </center>
   </br>
 
@@ -52,7 +52,7 @@ body {
 
 <br>
 <center>
-  <li><h1>Venetië</h1></li> 
+  <li><b>Venetië</b></li> 
 </center>
 </br> 
   
@@ -62,13 +62,13 @@ body {
 
 <br>
 <center>
- <img src="https://images.musement.com/cover/0002/39/top-cityscape-view-on-the-dome-of-santa-maria-del-fiori-florence-jpg_header-138319.jpeg?w=1200&h=630&q=95&fit=crop" style="width: 800px; height: 500px; margin: 0px;">
+ <img src="https://images.musement.com/cover/0002/39/top-cityscape-view-on-the-dome-of-santa-maria-del-fiori-florence-jpg_header-138319.jpeg?w=1200&h=630&q=95&fit=crop" style="width: 750px; height: 410px; margin: 0px;">
 </center>
 </br>
 
 <br>
 <center>
-  <li><h1>Florence</h1></li> 
+  <li><b>Florence</b></li> 
 </center>
 </br> 
 
@@ -78,13 +78,13 @@ body {
   
 <br>
 <center>
- <img src="https://thumbor.pijper.io/p-bOI8g6u-Flzej9-Z4pOy31mG8=/1440x582/https://storage.indicium.app/source/lonely-planet/bestemmingen/europa/steden/milaan_170027194_mlenn.jpg" style="width: 800px; height: 500px; margin: 0px;"> 
+ <img src="https://thumbor.pijper.io/p-bOI8g6u-Flzej9-Z4pOy31mG8=/1440x582/https://storage.indicium.app/source/lonely-planet/bestemmingen/europa/steden/milaan_170027194_mlenn.jpg" style="width: 750px; height: 410px; margin: 0px;"> 
 </center>
 </br>
 
 <br>
 <center>
-  <li><h1>Milaan</h1></li> 
+  <li><b>Milaan</b></li> 
 </center>
 </br> 
 
@@ -100,7 +100,7 @@ body {
 
 <br>
 <center>
-  <li><h1>Sardinië</h1></li> 
+  <li><b>Sardinië</b></li> 
 </center>
 </br> 
 
