--- a/eten/index.html
+++ b/eten/index.html
@@ -13,7 +13,7 @@ body {
   <a href="https://28030.github.io/informatie/index.html">informatie</a>
   <a href="https://28030.github.io/steden/index.html">steden</a>
   <a href="https://28030.github.io/eten/index.html">eten</a>
-  <a href="vervoer">vervoer</a>
+  <a href="https://28030.github.io/vervoer/index.html">vervoer</a>
   </center>
   
   <center>
