--- a/vervoer/index.html
+++ b/vervoer/index.html
@@ -1,1 +1,50 @@
+<html>
+<head>
+<title> Web-design informatica</title>
+<style>
+body {
+  background-color: #e6ffe6;
+}
+</style>
+</head>
+<body> 
+  
+  <center>
+  <a href="https://28030.github.io/website/index.html">home</a>
+  <a href="https://28030.github.io/informatie/index.html">informatie</a>
+  <a href="https://28030.github.io/steden/index.html">steden</a>
+  <a href="https://28030.github.io/eten/index.html">eten</a>
+  <a href="https://28030.github.io/vervoer/index.html">vervoer</a>
+  </center>
+  
+  <center>
+<h1> Vervoer </h1> 
+  </center> 
+  
+  <center> 
+    <p> Italië ligt natuurlijk niet zo ver weg gelukkig, daarom zijn er meerdere manieren om daar te komen. Hieronder staat in een tabel de beste manieren om naar Italië te gaan en de kosten. </p>
+  </center> 
+  
+  <table>
+  <tr>
+    <th>Vervoersmiddel</th>
+    <th>Kosten</th>
+    <th>Duurte van de reis</th> 
+  </tr>
+  <tr>
+    <td>Vliegtuig</td>
+    <td>Tussen de 100 en 150 euro</td>
+    <td>Het vliegen duur ongeveer 2 1/2 uur</td> 
+  </tr>
+  <tr>
+    <td>Auto</td>
+    <td>Je betaalt alleen voor de benzine</td>
+    <td>Je doet er ongeveer 16 uur over om in Italië te komen</td>
+  </tr>
+  <tr>
+    <td>Bus</td>
+    <td>Een busreis is nu niet mogelijk met corona</td>
+    <td>Met de bus doe je er ongeveer 20 uur over om in Italië te komen/td>
+  </tr>
+</table>
 
