--- a/vervoer/index.html
+++ b/vervoer/index.html
@@ -34,7 +34,7 @@ body {
   <tr>
     <td>Vliegtuig</td>
     <td>Tussen de 100 en 150 euro</td>
-    <td>Het vliegen duur ongeveer 2 1/2 uur</td> 
+    <td>Het vliegen duurt ongeveer 2 1/2 uur</td> 
   </tr>
   <tr>
     <td>Auto</td>
