--- a/vervoer/index.html
+++ b/vervoer/index.html
@@ -47,4 +47,15 @@ body {
     <td>Met de bus doe je er ongeveer 20 uur over om in Italië te komen/td>
   </tr>
 </table>
+  
+<br>
+  </br>
+  
+   <p>
+  <center>
+  <img src="https://media.libelle.nl/m/a2a89mqilliu_home_landscape_top_article_630x325.jpg">
+  </center>
+  </p>
+  
+  
 
